// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deserialize bodybox block 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "test",
              },
            ],
          },
        ],
        "type": "bodybox",
      },
    ],
  },
  "kind": "state",
}
`;

exports[`deserialize footnote 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "
      Lorem.",
              },
            ],
          },
          Object {
            "data": Object {
              "authors": Array [
                "Jony Ive",
              ],
              "edition": "4",
              "publisher": "Apple",
              "title": "Apple Watch",
              "type": "",
              "year": "2015",
            },
            "isVoid": false,
            "kind": "inline",
            "nodes": Array [
              Object {
                "kind": "text",
                "ranges": Array [
                  Object {
                    "kind": "range",
                    "marks": Array [],
                    "text": "#",
                  },
                ],
              },
            ],
            "type": "footnote",
          },
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "
      Ipsum.",
              },
            ],
          },
          Object {
            "data": Object {
              "authors": Array [
                "Steve Jobs",
              ],
              "edition": "1",
              "publisher": "Apple",
              "title": "iPhone",
              "type": "",
              "year": "2007",
            },
            "isVoid": false,
            "kind": "inline",
            "nodes": Array [
              Object {
                "kind": "text",
                "ranges": Array [
                  Object {
                    "kind": "range",
                    "marks": Array [],
                    "text": "#",
                  },
                ],
              },
            ],
            "type": "footnote",
          },
          Object {
            "kind": "text",
            "ranges": Array [
              Object {
                "kind": "range",
                "marks": Array [],
                "text": "
    
    ",
              },
            ],
          },
        ],
        "type": "paragraph",
      },
    ],
  },
  "kind": "state",
}
`;

exports[`serialize bodybox block 1`] = `
<div
  className="c-bodybox"
>
  <p>
    test
  </p>
</div>
`;

exports[`serialize embed block 1`] = `
<embed
  data-caption="test"
/>
`;

exports[`serialize footnote 1`] = `
<a
  href="#ref_1_cite"
  name="ref_1_sup"
>
  <sup>
    1
  </sup>
</a>
`;

exports[`serialize footnote 2`] = `
<a
  href="#ref_2_cite"
  name="ref_2_sup"
>
  <sup>
    2
  </sup>
</a>
`;
